<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.frostedbytes.android.countdown.MainActivity">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_light"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_light"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_light"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom" />

</menu>
