<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/series_text_id"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:labelFor="@id/series_edit_id"
    android:text="@string/series_id"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@id/series_edit_id"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/series_edit_id"/>
  <EditText
    android:id="@+id/series_edit_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:autofillHints="@string/hint_publisher"
    android:enabled="false"
    android:inputType="textPersonName|textNoSuggestions"
    android:text="@string/placeholder"
    android:textAlignment="textEnd"
    android:textColor="@color/primaryLightColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/series_text_name"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:labelFor="@id/series_edit_name"
    android:text="@string/series_name"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/series_edit_id"/>
  <EditText
    android:id="@+id/series_edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:autofillHints=""
    android:enabled="false"
    android:inputType="number|textNoSuggestions"
    android:text="@string/placeholder"
    android:textAlignment="textEnd"
    android:textColor="@color/primaryLightColor"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/series_text_name" />
  <TextView
    android:id="@+id/series_text_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:labelFor="@id/series_edit_name"
    android:text="@string/series_hint"
    android:textSize="14sp"
    android:textStyle="italic"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/series_edit_name" />

  <TextView
    android:id="@+id/series_text_volume"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:labelFor="@id/series_edit_volume"
    android:text="@string/volume_number"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="@id/series_edit_volume"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/series_edit_volume"/>
  <EditText
    android:id="@+id/series_edit_volume"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:autofillHints=""
    android:ems="3"
    android:inputType="number|textNoSuggestions"
    android:text="@string/placeholder"
    android:textAlignment="center"
    android:textColor="@color/primaryLightColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/series_text_hint" />

  <TextView
    android:id="@+id/series_text_disclaimer"
    android:textStyle="italic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/disclaimer_comic_series"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/series_button_continue"/>

  <Button
    android:id="@+id/series_button_continue"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/continue_button"
    app:layout_constraintEnd_toStartOf="@+id/series_button_cancel"
    app:layout_constraintBottom_toBottomOf="parent"/>
  <Button
    android:id="@+id/series_button_cancel"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/cancel_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
