<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background">

  <TextView
    android:id="@+id/tutorial_text_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/hint_tutorial"
    android:textColor="@color/secondaryTextColor"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:id="@+id/tutorial_image_barcode"
    android:layout_width="@android:dimen/thumbnail_width"
    android:layout_height="@android:dimen/notification_large_icon_width"
    android:layout_margin="@dimen/default_view_margin"
    android:contentDescription="@string/hint_barcode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tutorial_text_hint"
    app:srcCompat="@drawable/barcode_base"/>
  <TextView
    android:id="@+id/tutorial_text_note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/note_manual_bar_code"
    android:textColor="@color/secondaryTextColor"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tutorial_image_barcode"/>
  <Switch
    android:id="@+id/tutorial_switch_hide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/show_hint"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tutorial_text_note" />
  <Button
    android:id="@+id/tutorial_button_continue"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/continue_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tutorial_switch_hide" />
</androidx.constraintlayout.widget.ConstraintLayout>