<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:card_view="http://schemas.android.com/tools">

  <androidx.cardview.widget.CardView
    android:id="@+id/sync_card_export"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    card_view:cardCornerRadius="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/sync_card_import">

    <TextView
      android:id="@+id/sync_text_export_explained"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/sync_export_explained"
      android:textAlignment="center"/>
    <ImageView
      android:id="@+id/sync_image_export"
      android:layout_width="@dimen/image_width_thumbnail"
      android:layout_height="@dimen/image_height_thumbnail"
      android:layout_margin="24dp"
      android:layout_gravity="center"
      app:srcCompat="@drawable/ic_export_dark"
      android:contentDescription="@string/title_export"/>
    <TextView
      android:id="@+id/sync_text_export_warning"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_gravity="bottom"
      android:text="@string/sync_export_warning"
      android:textAlignment="center"
      android:textColor="@color/secondaryLightColor"/>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/sync_card_import"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/default_view_margin"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="2dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sync_card_export"
    card_view:cardCornerRadius="8dp">

    <TextView
      android:id="@+id/sync_text_import_explained"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/sync_import_explained"
      android:textAlignment="center"/>
    <ImageView
      android:id="@+id/sync_image_import"
      android:layout_width="@dimen/image_width_thumbnail"
      android:layout_height="@dimen/image_height_thumbnail"
      android:layout_margin="24dp"
      android:layout_gravity="center"
      android:contentDescription="@string/title_import"
      app:srcCompat="@drawable/ic_import_dark"/>
    <TextView
      android:id="@+id/sync_text_import_warning"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_gravity="bottom"
      android:text="@string/sync_import_warning"
      android:textAlignment="center"
      android:textColor="@color/secondaryLightColor"/>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
