<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="1dp"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical">

  <TextView
    android:id="@+id/result_text_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:gravity="start"
    android:text="@string/placeholder"
    android:textAlignment="viewStart"
    android:textColor="@android:color/white"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/result_text_series"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:text="@string/placeholder"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/result_text_title"
    app:layout_constraintBottom_toTopOf="@id/result_text_publisher"/>

  <TextView
    android:id="@+id/result_text_publisher"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/publisher_format"
    android:textAlignment="viewStart"
    app:layout_constraintBottom_toTopOf="@id/result_text_issue"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/result_text_series" />

  <TextView
    android:id="@+id/result_text_published"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/published_date_format"
    android:textAlignment="viewEnd"
    app:layout_constraintBottom_toTopOf="@id/result_text_issue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/result_text_issue" />

  <TextView
    android:id="@+id/result_text_issue"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/issue_format"
    android:textAlignment="viewStart"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/result_button_add"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/result_text_publisher" />

  <Button
    android:id="@+id/result_button_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/add_to_library"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
